WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228565
[iOS] Ignore extra route change notifications
https://bugs.webkit.org/show_bug.cgi?id=228565
Summary
[iOS] Ignore extra route change notifications
Eric Carlson
Reported
2021-07-28 13:20:27 PDT
`AVAudioSessionRouteChangeNotification` may fire multiple times inn quick succession when a microphone is attached or detached, ignore any received while recomputing device list.
Attachments
Patch
(3.00 KB, patch)
2021-07-28 13:32 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-07-28 13:31:04 PDT
rdar://81037397
Eric Carlson
Comment 2
2021-07-28 13:32:14 PDT
Created
attachment 434457
[details]
Patch
Jer Noble
Comment 3
2021-07-28 13:35:59 PDT
Comment on
attachment 434457
[details]
Patch r=me; nit, please add a bit more detail to the ChangeLog from the bugzilla bug about what problem this is attempting to fix, for posterity.
EWS
Comment 4
2021-07-28 14:43:45 PDT
Committed
r280400
(
240041@main
): <
https://commits.webkit.org/240041@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434457
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug