[iOS] Ignore extra route change notifications https://bugs.webkit.org/show_bug.cgi?id=228565

Reviewed by Jer Noble.

Tested manually, this only reproduces on iOS hardware.

* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h:
* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.mm:
(WebCore::AVAudioSessionCaptureDeviceManager::scheduleUpdateCaptureDevices): Do
nothing if m_recomputeDevices is true.
(WebCore::AVAudioSessionCaptureDeviceManager::computeCaptureDevices): Don't rebuilding
device list unless m_recomputeDevices is set. Clear m_recomputeDevices after after
rebuilding list.


Canonical link: https://commits.webkit.org/240041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280400 268f45cc-cd09-0410-ab3c-d52691b4dbfc